# veloxvm

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  compile-racket.sh  compile-scheme.sh  compile.sh  index.html  run.sh
apps/: README.md  bit.scm  case.scm  case2.cyl  char.scm  complex.scm  cond.scm  crypto-test.scm  dns-query.cyl  do.scm  equality.scm  exceptions.iota  exceptions2.scm  factorial.scm  filter.iota  for-each.scm  for.cyl  if-contiki.scm  io-basic.scm  io.scm  lambda.scm  let-lambda.scm  letrec.scm  lib.scm  list.scm  list2.scm  loop.cyl  math.scm  math2.scm  named-let.scm  nested.scm  packet2.cyl  radio.scm  rpl.cyl  sht11.scm  sieve2.iota  square.cyl  string.scm  system.scm  tail.scm  (+4 more)
benchmarks/: README.md  alloc-churn.scm  closures.scm  deep-structures.scm  fib-recursive.scm  memory-stress.scm  prime-sieve.scm  run-benchmarks.sh  tree-walk.scm
control/: vm-control.c
core/: expr-bit.c  expr-box.c  expr-char.c  expr-cmp.c  expr-exceptions.c  expr-fp.c  expr-io.c  expr-ip.c  expr-list.c  expr-math.c  expr-mutex.c  expr-packet.c  expr-primitives.c  expr-string.c  expr-system.c  expr-thread.c  expr-vector.c  (+27 more)
tools/repl/: .gitignore  README.md  pyproject.toml  velox-repl
tools/repl/tests/: test_coap_loopback.py
tools/repl/tests/fixtures/: stub_compiler.py  stub_vm.py
tools/repl/velox_repl/: __main__.py  cli.py  coap_transport.py  compiler.py  core.py  protocol.py  vm.py
tools/repl/velox_repl/render/: __init__.py  decode.py  python.py  scheme.py
tools/repl/velox_repl/stubs/: stub_compiler.py  stub_delta.py  stub_vm.py
(+386 files in other folders)
